--- a/inst/doc/Recla.Rmd
+++ b/inst/doc/Recla.Rmd
@@ -479,6 +479,7 @@ mediate_obj())$best
 [mediatePlotServer()](https://github.com/byandell-sysgen/qtl2shiny/blob/master/R/mediatePlotApp.R)
 
 ```{r eval=FALSE}
+# mediate_plot
 ggplot2::autoplot(mediate_obj, "pos_LR", local_only = TRUE, 
   significant = TRUE)
 ```
